Changes to comments in CMakeLists.txt

--- a/src/autopas/CMakeLists.txt
+++ b/src/autopas/CMakeLists.txt
@@ -22,9 +22,9 @@ target_link_libraries(
         $<$<BOOL:${AUTOPAS_OPENMP}>:OpenMP::OpenMP_CXX>
         spdlog::spdlog
         $<$<OR:$<BOOL:${AUTOPAS_INTERNODE_TUNING}>,$<BOOL:${MD_FLEXIBLE_USE_MPI}>>:MPI::MPI_CXX>
-        Eigen3
+        Eigen3 # needs to be public as Math.h is used by LJMUlticenterFunctor used in md-flexible
     PRIVATE
-        # harmony and Eigen3 are only needed privately when building AutoPas.
+        # harmony only needed privately when building AutoPas.
         harmony
 )
 
