--- a/examples/md-flexible/input/test.yaml
+++ b/examples/md-flexible/input/test.yaml
@@ -50,10 +50,10 @@ Objects:
       bottomLeftCorner           :  [0, 27, 0]
       particle-spacing           :  1.
       velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1
+      site-type              :  0
+      site-epsilon           :  1
+      site-sigma             :  1
+      site-mass              :  1
 no-flops                         :  false
 no-end-config                    :  true
 no-progress-bar                  :  false
