Further minor fixes to yaml parsing

--- a/examples/md-flexible/input/test.yaml
+++ b/examples/md-flexible/input/test.yaml
@@ -14,8 +14,8 @@ cutoff                           :  2
 box-min                          :  [0, 0, 0]
 box-max                          :  [15, 60, 15]
 cell-size                        :  [1]
-deltaT                           :  0.00182367
-iterations                       :  12000
+deltaT                           :  0
+iterations                       :  100
 periodic-boundaries              :  true
 include-rotational               : true
 Sites:
