--- a/examples/md-flexible/input/test.yaml
+++ b/examples/md-flexible/input/test.yaml
@@ -9,7 +9,7 @@ selector-strategy                :  Fastest-Mean-Value
 tuning-strategy                  :  predictive-tuning
 tuning-interval                  :  6000
 tuning-samples                   :  10
-functor                          :  Lennard-Jones (12-6)
+functor                          :  Lennard-Jones Multicentered
 cutoff                           :  2
 box-min                          :  [0, 0, 0]
 box-max                          :  [15, 60, 15]
@@ -17,7 +17,7 @@ cell-size                        :  [1]
 deltaT                           :  0
 iterations                       :  100
 periodic-boundaries              :  true
-include-rotational               : true
+include-rotational               :  true
 Sites:
   0:
     site-type                    : 0
@@ -43,18 +43,18 @@ Molecules:
     molecule-to-site-id          : [0,1,1]
     molecule-to-site-pos         : [[0,0,0],[-0.1,0.2,0],[0.1,0.2,0]]
 Objects:
-  CubeClosestPacked:
+  CubGridObjectsStr:
     0:
-      box-length                 :  [15, 6, 15]
-      bottomLeftCorner           :  [0, 27, 0]
-      particle-spacing           :  1.
+      particles-per-dimension    :  [10, 10, 10]
+      particle-spacing           :  0.5
+      bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      site-type                  :  0
+      moelcule-type              :  0
       site-epsilon               :  1
       site-sigma                 :  1
       site-mass                  :  1
 no-flops                         :  false
 no-end-config                    :  true
 no-progress-bar                  :  false
-vtk-filename                     :  explodingLiquid
+vtk-filename                     :  MCTest
 vtk-write-frequency              :  100
