--- a/examples/md-flexible/input/test.yaml
+++ b/examples/md-flexible/input/test.yaml
@@ -1,5 +1,5 @@
-container                        :  [LinkedCells]
-traversal                        :  [lc_c01]
+container                        :  [DirectSum]
+traversal                        :  [ds_sequential]
 data-layout                      :  [AoS]
 newton3                          :  [disabled]
 verlet-rebuild-frequency         :  10
@@ -15,7 +15,7 @@ box-min                          :  [0, 0, 0]
 box-max                          :  [15, 60, 15]
 cell-size                        :  [1]
 deltaT                           :  0
-iterations                       :  100
+iterations                       :  100000
 periodic-boundaries              :  true
 include-rotational               :  true
 Sites:
@@ -49,7 +49,7 @@ Objects:
       particle-spacing           :  0.2
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      molecule-type              :  1
+      molecule-type              :  2
       site-epsilon               :  1
       site-sigma                 :  1
       site-mass                  :  1
