--- a/examples/md-flexible/input/test.yaml
+++ b/examples/md-flexible/input/test.yaml
@@ -1,5 +1,5 @@
-container                        :  [DirectSum]
-traversal                        :  [ds_sequential]
+container                        :  [LinkedCells]
+traversal                        :  [lc_c01]
 data-layout                      :  [AoS]
 newton3                          :  [disabled]
 verlet-rebuild-frequency         :  10
@@ -15,7 +15,7 @@ box-min                          :  [0, 0, 0]
 box-max                          :  [15, 60, 15]
 cell-size                        :  [1]
 deltaT                           :  0
-iterations                       :  100000
+iterations                       :  1000
 periodic-boundaries              :  true
 include-rotational               :  true
 Sites:
@@ -42,14 +42,18 @@ Molecules:
     molecule-type                : 2
     molecule-to-site-id          : [0,1,1]
     molecule-to-site-pos         : [[0,0,0],[-0.1,0.2,0],[0.1,0.2,0]]
+  3:
+    molecule-type: 3
+    molecule-to-site-id: [ 0,0,0,0,0,0,0,0,0,0 ]
+    molecule-to-site-pos: [ [ 0,0,0 ],[ 0,0,0 ],[ 0,0,0 ],[ 0,0,0 ],[ 0,0,0 ],[ 0,0,0 ],[ 0,0,0 ],[ 0,0,0 ],[ 0,0,0 ],[ 0,0,0 ] ]
 Objects:
   CubeGrid:
     0:
-      particles-per-dimension    :  [1, 1, 2]
-      particle-spacing           :  0.2
+      particles-per-dimension    :  [10,10,10]
+      particle-spacing           :  0.1
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      molecule-type              :  2
+      molecule-type              :  3
       site-epsilon               :  1
       site-sigma                 :  1
       site-mass                  :  1
