--- a/examples/md-flexible/input/test.yaml
+++ b/examples/md-flexible/input/test.yaml
@@ -12,10 +12,10 @@ tuning-samples                   :  10
 functor                          :  Multi
 cutoff                           :  2
 box-min                          :  [0, 0, 0]
-box-max                          :  [15, 60, 15]
+box-max                          :  [15,15,15]
 cell-size                        :  [1]
-deltaT                           :  0.1
-iterations                       :  1000
+deltaT                           :  0.01
+iterations                       :  2
 periodic-boundaries              :  true
 include-rotational               :  true
 Sites:
@@ -54,10 +54,10 @@ Objects:
   CubeGrid:
     0:
       particles-per-dimension    :  [10,10,10]
-      particle-spacing           :  0.1
-      bottomLeftCorner           :  [0, 0, 0]
+      particle-spacing           :  1.5
+      bottomLeftCorner           :  [0., 0., 0.]
       velocity                   :  [0, 0, 0]
-      molecule-type              :  3
+      molecule-type              :  0
       site-epsilon               :  1
       site-sigma                 :  1
       site-mass                  :  1
@@ -65,4 +65,4 @@ no-flops                         :  false
 no-end-config                    :  true
 no-progress-bar                  :  false
 vtk-filename                     :  MCTest
-vtk-write-frequency              :  100
+vtk-write-frequency              :  1
