--- a/examples/md-flexible/input/test.yaml
+++ b/examples/md-flexible/input/test.yaml
@@ -1,21 +1,20 @@
-container                        :  [LinkedCells]
+container                        :  [DirectSum, LinkedCells, LinkedCellsReferences, VarVerletListsAsBuild, VerletClusterLists, VerletLists, VerletListsCells, PairwiseVerletLists]
 traversal                        :  [lc_c01]
 data-layout                      :  [SoA]
 newton3                          :  [disabled]
 verlet-rebuild-frequency         :  10
-verlet-skin-radius               :  0.2
+verlet-skin-radius               :  1.0
 verlet-cluster-size              :  4
-selector-strategy                :  Fastest-Mean-Value
 tuning-strategy                  :  full-search
 tuning-interval                  :  6000
 tuning-samples                   :  10
 functor                          :  Multi
-cutoff                           :  2
+cutoff                           :  2.5
 box-min                          :  [0, 0, 0]
-box-max                          :  [15,15,15]
+box-max                          :  [25,25,25]
 cell-size                        :  [1]
-deltaT                           :  0.01
-iterations                       :  2
+deltaT                           :  0
+iterations                       :  10
 periodic-boundaries              :  true
 include-rotational               :  true
 Sites:
@@ -53,16 +52,17 @@ Molecules:
 Objects:
   CubeGrid:
     0:
-      particles-per-dimension    :  [1,2,1]
-      particle-spacing           :  1.5
+      particles-per-dimension    :  [3,3,3]
+      particle-spacing           :  1
       bottomLeftCorner           :  [0., 0., 0.]
       velocity                   :  [0, 0, 0]
       molecule-type              :  0
       site-epsilon               :  1
       site-sigma                 :  1
       site-mass                  :  1
+log-level                        :  info
 no-flops                         :  false
 no-end-config                    :  true
 no-progress-bar                  :  false
-vtk-filename                     :  MCTest
+vtk-filename                     :  MultiCenterAllOptionsAoS
 vtk-write-frequency              :  1
