--- a/examples/md-flexible/input/test.yaml
+++ b/examples/md-flexible/input/test.yaml
@@ -1,6 +1,6 @@
 container                        :  [DirectSum, LinkedCells, LinkedCellsReferences, VarVerletListsAsBuild, VerletClusterLists, VerletLists, VerletListsCells, PairwiseVerletLists]
 traversal                        :  [lc_c01]
-data-layout                      :  [SoA]
+data-layout                      :  [AoS]
 newton3                          :  [disabled]
 verlet-rebuild-frequency         :  10
 verlet-skin-radius               :  1.0
@@ -52,11 +52,11 @@ Molecules:
 Objects:
   CubeGrid:
     0:
-      particles-per-dimension    :  [3,3,3]
-      particle-spacing           :  1
+      particles-per-dimension    :  [50,50,50]
+      particle-spacing           :  0.5
       bottomLeftCorner           :  [0., 0., 0.]
       velocity                   :  [0, 0, 0]
-      molecule-type              :  0
+      molecule-type              :  2
       site-epsilon               :  1
       site-sigma                 :  1
       site-mass                  :  1
