changed the functor to avx for cluster

--- a/examples/md-flexible/input/SpinodalDecompositionPredictiveNoProgress.yaml
+++ b/examples/md-flexible/input/SpinodalDecompositionPredictiveNoProgress.yaml
@@ -9,7 +9,7 @@ tuning-strategy                  :  predictive-Search
 tuning-interval                  :  1000
 tuning-samples                   :  3
 tuning-max-evidence              :  10
-functor                          :  Lennard-Jones
+functor                          :  Lennard-Jones-AVX2
 newton3                          :  [disabled, enabled]
 cutoff                           :  2.5
 # these are the box size values for a equilibration with 160x160x160 and spacing 1.5
