--- a/examples/md-flexible/input/SpinodalDecomposition.yaml
+++ b/examples/md-flexible/input/SpinodalDecomposition.yaml
@@ -1,4 +1,4 @@
-functor                          :  Lennard-Jones (12-6)
+functor                          :  Lennard-Jones-AVX2
 cutoff                           :  2.5
 # these are the box size values for a equilibration with 160x160x160 and spacing 1.5
 box-min                          :  [-0.75, -0.75, -0.75]
