--- a/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
+++ b/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
@@ -1,4 +1,4 @@
-functor                          :  Lennard-Jones (12-6)
+functor                          :  Lennard-Jones-AVX2
 cutoff                           :  2.5
 deltaT                           :  0.00182367
 iterations                       :  100000
