--- a/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
+++ b/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
@@ -1,3 +1,8 @@
+container                        :  [LinkedCells, VerletLists, VerletListsCells, VerletClusterLists]
+selector-strategy                :  Fastest-Absolute-Value
+data-layout                      :  [AoS, SoA]
+traversal                        :  [ lc_c01, lc_c18, lc_c08, lc_sliced_c02, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced_c02, vcl_cluster_iteration, vcl_c01_balanced, vcl_c06 ] # Please see AllOptions.yaml for a comprehensive list of traversals
+newton3                          :  [disabled, enabled]
 functor                          :  Lennard-Jones-AVX2
 cutoff                           :  2.5
 deltaT                           :  0.00182367
