--- a/examples/md-flexible/input/explodingLiquidReinforcementLearningNoProgress.yaml
+++ b/examples/md-flexible/input/explodingLiquidReinforcementLearningNoProgress.yaml
@@ -1,11 +1,11 @@
-# container                        :  [LinkedCells, VarVerletListsAsBuild, VerletClusterLists, VerletLists, VerletListsCells, PairwiseVerletLists]
-# traversal                        :  [lc_sliced, lc_sliced_balanced, lc_sliced_c02, lc_c01, lc_c01_combined_SoA, lc_c04, lc_c04_HCP, lc_c04_combined_SoA, lc_c08, lc_c18, vcl_c06, vcl_c01_balanced, vcl_sliced, vcl_sliced_balanced, vcl_sliced_c02, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced, vlc_sliced_balanced, vlc_sliced_c02, vvl_as_built, vlp_c01, vlp_c18, vlp_sliced, vlp_sliced_balanced, vlp_sliced_c02]
-# data-layout                      :  [AoS, SoA]
-# newton3                          :  [disabled, enabled]
+container                        :  [LinkedCells, VerletLists, VerletListsCells, VerletClusterLists]
+traversal                        :  [ lc_c01, lc_c18, lc_c08, lc_sliced_c02, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced_c02, vcl_cluster_iteration, vcl_c01_balanced, vcl_c06 ] # Please see AllOptions.yaml for a comprehensive list of traversals
+data-layout                      :  [AoS, SoA]
+newton3                          :  [disabled, enabled]
 verlet-rebuild-frequency         :  10
 verlet-skin-radius               :  0.2
 verlet-cluster-size              :  4
-selector-strategy                :  Fastest-Mean-Value
+selector-strategy                :  Fastest-Absolute-Value
 tuning-strategy                  :  reinforcement-learning
 tuning-interval                  :  1000
 tuning-samples                   :  10
