--- a/examples/md-flexible/input/explodingLiquid.yaml
+++ b/examples/md-flexible/input/explodingLiquid.yaml
@@ -3,7 +3,7 @@
 # data-layout                      :  [AoS, SoA]
 # newton3                          :  [disabled, enabled]
 verlet-rebuild-frequency         :  10
-verlet-skin-radius               :  0.2
+verlet-skin-radius-per-timestep  :  0.02
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Mean-Value
 tuning-strategy                  :  predictive-tuning
