make ignoring build folders slightly more general

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # cmake stuff
-cmake-build-*/
 CMakeLists.txt.user
 cmake.check_cache
-build*/
+# any folder in the project root containing "build"
+/*build*/
 *compile_commands.json
 
 # editor stuff
