only compile functors that are actually tested

--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -98,6 +98,10 @@ jobs:
             -DAUTOPAS_ENABLE_THREAD_SANITIZER=${{ matrix.config[7] }} \
             -DAUTOPAS_INTERNODE_TUNING=${UseMPI} \
             -DMD_FLEXIBLE_USE_MPI=${UseMPI} \
+            -DMD_FLEXIBLE_FUNCTOR_AUTOVEC=ON \
+            -DMD_FLEXIBLE_FUNCTOR_AUTOVEC_GLOBALS=OFF \
+            -DMD_FLEXIBLE_FUNCTOR_AUTOVEC_AVX=ON \
+            -DMD_FLEXIBLE_FUNCTOR_AUTOVEC_SVE=OFF \
             -DAUTOPAS_ENABLE_ALLLBL=${UseMPI} \
             ..
           entrypoint.sh cmake --build . --parallel 1 
