--- a/examples/md-flexible/input/explodingLiquid.yaml
+++ b/examples/md-flexible/input/explodingLiquid.yaml
@@ -2,7 +2,7 @@
 # traversal                        :  [lc_sliced, lc_sliced_balanced, lc_sliced_c02, lc_c01, lc_c01_combined_SoA, lc_c04, lc_c04_HCP, lc_c04_combined_SoA, lc_c08, lc_c18, vcl_c06, vcl_c01_balanced, vcl_sliced, vcl_sliced_balanced, vcl_sliced_c02, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced, vlc_sliced_balanced, vlc_sliced_c02, vvl_as_built, vlp_c01, vlp_c18, vlp_sliced, vlp_sliced_balanced, vlp_sliced_c02]
 # data-layout                      :  [AoS, SoA]
 # newton3                          :  [disabled, enabled]
-verlet-rebuild-frequency         :  10
+verlet-rebuild-frequencies       :  [10]
 verlet-skin-radius-per-timestep  :  0.02
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Mean-Value
