Updating MDFlexConfigTest, as well as updating .yaml files used in testing, plus pruning a couple testing yaml filesthat are no longer in use.

--- a/examples/md-flexible/tests/yamlTestFiles/cubeGauss.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/cubeGauss.yaml
@@ -5,10 +5,7 @@
 Objects:
   CubeGauss:
     0:
-      particle-type: 0
-      particle-epsilon: 2.
-      particle-sigma: 2.
-      particle-mass: 2.
+      molecule-type: 0
       numberOfParticles: 100
       box-length: [8.,8.,8.]
       distribution-mean: [17.0, 3.0, 6]
