--- a/examples/md-flexible/tests/yamlTestFiles/sphere.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/sphere.yaml
@@ -5,10 +5,7 @@
 Objects:
   Sphere:
     0:
-      particle-type: 0
-      particle-epsilon: 4.
-      particle-sigma: 4.
-      particle-mass: 4.
+      molecule-type: 0
       center: [5.,-10.,0.]
       radius: 10
       particle-spacing: 1.5
