--- a/examples/md-flexible/tests/yamlTestFiles/cubeUniform.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/cubeUniform.yaml
@@ -5,10 +5,7 @@
 Objects:
   CubeUniform:
     0:
-      particle-type: 0
-      particle-epsilon: 3.
-      particle-sigma: 3.
-      particle-mass: 3.
+      molecule-type: 0
       numberOfParticles: 100
       box-length: [10.,10.,10.]
       velocity: [0.,0.,0.]
