Initial work on molecule parsing test

--- a/examples/md-flexible/tests/yamlTestFiles/siteParsingTestCorrect.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/siteParsingTestCorrect.yaml
@@ -1,4 +1,4 @@
-# Yaml input for MDFlexConfigTests.siteParsing
+# Yaml input for MDFlexConfigTests.correctSiteParsing
 # Used to test correct parsing of site information, in the case that the site information is correctly given.
 Sites:
   1:
