--- a/examples/md-flexible/tests/yamlTestFiles/siteParsingTestIncorrect2.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/siteParsingTestIncorrect2.yaml
@@ -1,4 +1,4 @@
-# Yaml input for MDFlexConfigTests.siteParsing
+# Yaml input for MDFlexConfigTests.incorrectSiteParsing
 # Used to test case that site information is not correctly given. Specifically, the case that not all site information
 # is given.
 Sites:
