Correcting yaml files with 'molecule-type' instead of 'molecule-id'

--- a/examples/md-flexible/tests/yamlTestFiles/periodic.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/periodic.yaml
@@ -7,7 +7,7 @@ log-level: debug
 Objects:
   CubeGrid:
     0:
-      molecule-type: 0
+      molecule-id: 0
       particles-per-dimension: [10,10,10]
       particle-spacing: 0.5
       velocity: [0.,0.,0.]
