--- a/examples/md-flexible/tests/yamlTestFiles/multipleObjectsWithMultipleTypesTest.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/multipleObjectsWithMultipleTypesTest.yaml
@@ -6,14 +6,14 @@
 Objects:
   CubeGrid:
     0:
-      molecule-type: 0
+      molecule-id: 0
       particles-per-dimension: [10,10,10]
       particle-spacing: 0.5
       velocity: [0.,0.,0.]
       bottomLeftCorner: [5.,5.,5.]
   CubeGauss:
     0:
-      molecule-type: 1
+      molecule-id: 1
       numberOfParticles: 100
       box-length: [8.,8.,8.]
       distribution-mean: [17.0, 3.0, 6]
@@ -22,14 +22,14 @@ Objects:
       bottomLeftCorner: [15.,0.,5.]
   CubeUniform:
     0:
-      molecule-type: 2
+      molecule-id: 2
       numberOfParticles: 100
       box-length: [10.,10.,10.]
       velocity: [0.,0.,0.]
       bottomLeftCorner: [0.,0.,-15.]
   Sphere:
     0:
-      molecule-type: 3
+      molecule-id: 3
       center: [5.,-10.,0.]
       radius: 10
       particle-spacing: 1.5
