--- a/examples/md-flexible/tests/yamlTestFiles/multipleSimilarObjects.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/multipleSimilarObjects.yaml
@@ -2,13 +2,13 @@
 Objects:
   CubeGrid:
     0:
-     molecule-type: 0
+     molecule-id: 0
      particles-per-dimension: [10,10,10]
      particle-spacing: 0.5
      velocity: [0.,0.,0.]
      bottomLeftCorner: [5.,5.,5.]
     1:
-     molecule-type: 1
+     molecule-id: 1
      particles-per-dimension: [10,10,10]
      particle-spacing: 0.5
      velocity: [0.,0.,0.]
