--- a/examples/md-flexible/tests/yamlTestFiles/molParsingTest.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/molParsingTest.yaml
@@ -1,5 +1,16 @@
 # Yaml input for MDFlexConfigTests.molParsingCorrect
 # Used to test correct parsing of site information, in the case that the site information is correctly given.
+Sites:
+  1:
+    site-id:      0
+    site-epsilon: 1.
+    site-sigma:   1.
+    site-mass:    1.
+  2:
+    site-id:      1
+    site-epsilon: 1.2
+    site-sigma:   0.8
+    site-mass:    0.5
 Molecules:
   0:
     molecule-id:                0
