--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,7 +19,8 @@ add_custom_target(
         4
 )
 
-add_subdirectory(md-flexible)
-add_subdirectory(sph)
-add_subdirectory(sph-mpi)
-add_subdirectory(sphDiagramGeneration)
+# add_subdirectory(md-flexible)
+add_subdirectory(md-julia)
+# add_subdirectory(sph)
+# add_subdirectory(sph-mpi)
+# add_subdirectory(sphDiagramGeneration)
