--- a/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
+++ b/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
@@ -1,19 +1,23 @@
-functor                          :  Lennard-Jones (12-6)
+# This yaml file is for single-site molecular simulation
+functor                          :  Lennard-Jones (12-6) AVX
 cutoff                           :  2.5
 deltaT                           :  0.00182367
 iterations                       :  100000
-periodic-boundaries              :  true
+boundary-type                    : [periodic, periodic, periodic]
+Sites:
+  0:
+    site-id                      :  0
+    site-epsilon                 :  1.
+    site-sigma                   :  1.
+    site-mass                    :  1.
 Objects:
   CubeGrid:
     0:
+      molecule-id                :  0
       particles-per-dimension    :  [160, 160, 160]
       particle-spacing           :  1.5
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1
 thermostat:
   initialTemperature             :  1.4
   targetTemperature              :  1.4
