--- a/examples/md-flexible/input/explodingLiquid.yaml
+++ b/examples/md-flexible/input/explodingLiquid.yaml
@@ -1,3 +1,4 @@
+# This yaml file is for single-site molecular simulation
 # container                        :  [LinkedCells, VarVerletListsAsBuild, VerletClusterLists, VerletLists, VerletListsCells, PairwiseVerletLists]
 # traversal                        :  [lc_sliced, lc_sliced_balanced, lc_sliced_c02, lc_c01, lc_c01_combined_SoA, lc_c04, lc_c04_HCP, lc_c04_combined_SoA, lc_c08, lc_c18, vcl_c06, vcl_c01_balanced, vcl_sliced, vcl_sliced_balanced, vcl_sliced_c02, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced, vlc_sliced_balanced, vlc_sliced_c02, vvl_as_built, vlp_c01, vlp_c18, vlp_sliced, vlp_sliced_balanced, vlp_sliced_c02]
 # data-layout                      :  [AoS, SoA]
@@ -17,17 +18,20 @@ cell-size                        :  [1]
 deltaT                           :  0.00182367
 iterations                       :  12000
 periodic-boundaries              :  true
+Sites:
+  0:
+    site-id                      :  0
+    site-epsilon                 :  1.
+    site-sigma                   :  1.
+    site-mass                    :  1.
 Objects:                         
   CubeClosestPacked:
-    0:  
+    0:
+      molecule-id                :  0
       box-length                 :  [15, 6, 15]
       bottomLeftCorner           :  [0, 27, 0]
       particle-spacing           :  1.
       velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1
 no-flops                         :  false
 no-end-config                    :  true
 no-progress-bar                  :  false
