--- a/examples/md-flexible/input/AllOptions.yaml
+++ b/examples/md-flexible/input/AllOptions.yaml
@@ -19,6 +19,19 @@ cell-size                        :  [1]
 deltaT                           :  0.001
 iterations                       :  10
 periodic-boundaries              :  true
+Sites:
+  0:
+    site-id                      :  0
+    site-epsilon                 :  1.
+    site-sigma                   :  1.
+    site-mass                    :  0.5
+# Uncomment below to run a multi-site simulation.
+#Molecules:
+#  0:
+#    molecule-type: 0
+#    molecule-to-site-id: [ 0, 0, 0 ]
+#    molecule-to-site-pos: [ [ 0.74349607, 1.20300191, 0. ], [ 0.3249197, -1.37638192, 0. ], [-1.37638192, -0.3249197, 0. ] ]
+#    molecule-moment-of-inertia: [ 5.23606798, 0.76393202, 6. ]
 Objects:                         
   CubeGrid:
     0:  
