--- a/examples/md-flexible/input/fallingDrop.yaml
+++ b/examples/md-flexible/input/fallingDrop.yaml
@@ -10,7 +10,7 @@ tuning-strategy                  :  full-Search
 tuning-interval                  :  2500
 tuning-samples                   :  3
 tuning-max-evidence              :  10
-functor                          :  Lennard-Jones
+functor                          :  Lennard-Jones AVX
 newton3                          :  [disabled, enabled]
 cutoff                           :  3
 box-min                          :  [0, 0, 0]
@@ -20,6 +20,12 @@ deltaT                           :  0.0005
 iterations                       :  15000
 boundary-type                    : [reflective,reflective,reflective]
 globalForce                      :  [0,0,-12]
+Sites:
+  0:
+    site-id                      :  0
+    site-epsilon                 :  1.
+    site-sigma                   :  1.
+    site-mass                    :  1.
 Objects:
   # "water"
   CubeClosestPacked:
@@ -28,10 +34,7 @@ Objects:
       bottomLeftCorner           :  [1, 1, 1]
       box-length                 :  [48, 28, 10]
       velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1
+      molecule-id
   Sphere:
     0:  
       center                     :  [18, 15, 30]
