--- a/examples/md-flexible/input/Variable-Verlet-List.yaml
+++ b/examples/md-flexible/input/Variable-Verlet-List.yaml
@@ -2,35 +2,40 @@ container                        :  [VerletLists]
 traversal                        :  [ds_sequential, lc_sliced, lc_sliced_balanced, lc_sliced_c02, lc_c01, lc_c01_combined_SoA, lc_c04, lc_c04_HCP, lc_c04_combined_SoA, lc_c08, lc_c18, vcl_cluster_iteration, vcl_c06, vcl_c01_balanced, vcl_sliced, vcl_sliced_balanced, vcl_sliced_c02, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced, vlc_sliced_balanced, vlc_sliced_c02, vvl_as_built, vlp_c01, vlp_c18, vlp_sliced, vlp_sliced_balanced, vlp_sliced_c02]
 data-layout                      :  [AoS]
 newton3                          :  [disabled, enabled]
-verlet-rebuild-frequencies       :  [10, 210, 410, 610, 810]
-verlet-skin-radius-per-timestep  :  0.01
-selector-strategy                :  Fastest-Absolute-Value
-tuning-strategy                  :  Full-Search
+verlet-rebuild-frequencies       :  [128]
+verlet-skin-radius-per-timestep  :  0.15
+selector-strategy                :  Fastest-Mean-Value
+tuning-strategy                  :  full-Search
 mpi-strategy                     :  no-mpi
-tuning-interval                  :  1000
-tuning-samples                   :  1000
+tuning-interval                  :  5000
+tuning-samples                   :  5000
 functor                          :  Lennard-Jones-AVX2
-cutoff                           :  2
+cutoff                           :  3
 box-min                          :  [0, 0, 0]
-box-max                          :  [50, 50, 25]
+box-max                          :  [20, 20, 10]
 cell-size                        :  [1]
-deltaT                           :  0.005
+deltaT                           :  0.00005
 
-iterations                       :  5000
-boundary-type                    :  [reflective, reflective, reflective]
+iterations                       :  15000
+boundary-type                    :  [periodic,periodic,reflective]
+globalForce                      :  [0,0,-20]
 Objects:
-  CubeClosestPacked:
+  CubeGrid:
     0:
-      box-length                 : [25, 20, 15]
-      bottomLeftCorner           : [0, 0, 0]
-      particle-spacing           : 1
-      velocity                   : [0, 1, 0]
-      particle-type              : 0
-      particle-epsilon           : 1
-      particle-sigma             : 1
-      particle-mass              : 1
+      particle-type: 0
+      particle-epsilon: 1.
+      particle-sigma: 1.
+      particle-mass: 1.
+      particles-per-dimension: [ 20, 20, 4]
+      particle-spacing: 0.8
+      velocity: [ 0.,0.,0. ]
+      bottomLeftCorner: [ 5.,5.,0.5 ]
 no-flops                         :  false
 no-end-config                    :  true
 no-progress-bar                  :  false
 vtk-filename                     :  Variable-Verlet
-vtk-write-frequency              :  1000
+vtk-write-frequency              :  100
+
+
+
+
